# dev-cli

./: Justfile  README.md  lefthook.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-checks.yml
docs/: SECURITY.md
dx/: main.py  state.py
